software-center (2.1.20) UNRELEASED; urgency=low

  * softwarecenter/backend/login_sso.py:
    - improve help text now that ubuntu-sso-client is more flexible
      about it (thanks to Naty Bidart) LP: #624097
  * debian/control:
    - tighten dependency of ubuntu-sso-client (for the helptext)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 14 Sep 2010 14:07:00 +0200

software-center (2.1.19) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/widgets/mkit.py:
    - fix crash during action_bar refresh (LP: #635044)
  * softwarecenter/backend/channel.py:
    - always display the partner channel, even if its
      source is not enabled (LP: #635003) 
  * softwarecenter/db/application.py,
    softwarecenter/db/database.py,
    softwarecenter/view/appview.py,
    softwarecenter/view/softwarepane.py:
    - make StoreDatabase.get_appname return None if the
      name is not defined in the xapian doc
    - consolidate code to generate application name and
      summary for display in the UI to a single place
    - wire applist, appdetails and the navigation bar
      to use it (LP: #636004)

  [ Kiwinote ]
  * data/software-center.menu.in:
    - fix typo to now use applications-ocaml icon, thanks mpt (LP: #635732)
  * softwarecenter/backend/channel.py:
    - allow 'for purchase' to have an icon in non-English locales (LP: #636242)
  * softwarecenter/db/application.py:
    - try to open deb file, except on any sort of error (LP: #633379)
    - simplify when we use which warnings for deb files (LP: #635015)
    - reload pkg cache object and xapian doc if it turns out that the pkgname
      of a deb file is different than what we guessed on basis of the file name
  * softwarecenter/utils.py:
    - fix crash when desktop_file is None (LP: #635596)
  * softwarecenter/view/appdetailsview_gtk.py:
    - use the display name for app entry in 'where is it' (LP: #635464)
    - restore correct padding in addons status bar (LP: #625230)